Fix bullet point alignment in Firefox dialog
Add proper flex alignment styling to list items in bullet-list to ensure
bullets align correctly with their text in Firefox. This fixes the misalignment
of bullet points observed specifically in Firefox.

Changes:
- Set padding-left on .bullet-list for proper indentation
- Add display: flex with align-items: flex-start to li elements
- Add margin-bottom to li items for spacing
- Reset margin on app-paragraph within list items

--- a/src/app/shared/components/dialogs/dropdown-dialog/dropdown-dialog.component.scss
+++ b/src/app/shared/components/dialogs/dropdown-dialog/dropdown-dialog.component.scss
@@ -3,4 +3,15 @@
 .bullet-list {
   margin-top: theme.$padding-small;
   margin-bottom: theme.$padding-small;
+  padding-left: 1.5em;
+
+  li {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 0.5em;
+
+    app-paragraph {
+      margin: 0;
+    }
+  }
 }
